src/PrimaryGrammar/PrimaryGrammarParser.java
// Generated from PrimaryGrammar.g4 by ANTLR 4.9.2

package PrimaryGrammar;
import types.*;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrimaryGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, INTEGER=47, REAL=48, TEXT=49, BOOLEAN=50, ID=51, COMMENT=52, 
		WS=53, ERROR=54;
	public static final int
		RULE_program = 0, RULE_statList = 1, RULE_stat = 2, RULE_title = 3, RULE_question = 4, 
		RULE_mChoice = 5, RULE_matching = 6, RULE_answer = 7, RULE_matchAnswerLeft = 8, 
		RULE_matchAnswerRight = 9, RULE_rightPeer = 10, RULE_type = 11, RULE_declaration = 12, 
		RULE_assignment = 13, RULE_arrayValues = 14, RULE_arrayOps = 15, RULE_add = 16, 
		RULE_remove = 17, RULE_expr = 18, RULE_withFilter = 19, RULE_arrayGet = 20, 
		RULE_getQuestion = 21, RULE_editQuestion = 22, RULE_show = 23, RULE_shuffleAnswers = 24, 
		RULE_captureQuestion = 25, RULE_report = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statList", "stat", "title", "question", "mChoice", "matching", 
			"answer", "matchAnswerLeft", "matchAnswerRight", "rightPeer", "type", 
			"declaration", "assignment", "arrayValues", "arrayOps", "add", "remove", 
			"expr", "withFilter", "arrayGet", "getQuestion", "editQuestion", "show", 
			"shuffleAnswers", "captureQuestion", "report"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'quiz'", "'question'", "':'", "'type'", "'multiple-choice'", "'theme'", 
			"'text'", "'answers'", "'{'", "'}'", "'matching'", "'setLeft'", "'setRight'", 
			"'rightPeer'", "'->'", "'number'", "'real'", "'bool'", "'array['", "']'", 
			"'='", "'get'", "'all'", "'from'", "'['", "','", "'shuffle'", "'add'", 
			"'remove'", "'+'", "'-'", "'^'", "'*'", "'/'", "'%'", "'('", "')'", "'with'", 
			"'size'", "'as'", "'select'", "'edit'", "'show'", "'capture'", "'request'", 
			"'report'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "INTEGER", 
			"REAL", "TEXT", "BOOLEAN", "ID", "COMMENT", "WS", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrimaryGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	static protected Map<String,Symbol> symbolTable = new HashMap<>();

	public PrimaryGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public StatListContext statList() {
			return getRuleContext(StatListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PrimaryGrammarParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			statList();
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatListContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public StatListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterStatList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitStatList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitStatList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatListContext statList() throws RecognitionException {
		StatListContext _localctx = new StatListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__6) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__21) | (1L << T__29) | (1L << T__30) | (1L << T__35) | (1L << T__41) | (1L << T__43) | (1L << T__45) | (1L << INTEGER) | (1L << REAL) | (1L << TEXT) | (1L << BOOLEAN) | (1L << ID))) != 0)) {
				{
				{
				setState(57);
				stat();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ArrayOpsContext arrayOps() {
			return getRuleContext(ArrayOpsContext.class,0);
		}
		public GetQuestionContext getQuestion() {
			return getRuleContext(GetQuestionContext.class,0);
		}
		public EditQuestionContext editQuestion() {
			return getRuleContext(EditQuestionContext.class,0);
		}
		public ShowContext show() {
			return getRuleContext(ShowContext.class,0);
		}
		public CaptureQuestionContext captureQuestion() {
			return getRuleContext(CaptureQuestionContext.class,0);
		}
		public ReportContext report() {
			return getRuleContext(ReportContext.class,0);
		}
		public ShuffleAnswersContext shuffleAnswers() {
			return getRuleContext(ShuffleAnswersContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				title();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				question();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				assignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				arrayOps();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(68);
				getQuestion();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(69);
				editQuestion();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(70);
				show();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(71);
				captureQuestion();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(72);
				report();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(73);
				shuffleAnswers();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(PrimaryGrammarParser.TEXT, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__0);
			setState(77);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionContext extends ParserRuleContext {
		public MChoiceContext mChoice() {
			return getRuleContext(MChoiceContext.class,0);
		}
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_question);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				mChoice();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				matching();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MChoiceContext extends ParserRuleContext {
		public String varName;
		public TerminalNode ID() { return getToken(PrimaryGrammarParser.ID, 0); }
		public List<TerminalNode> TEXT() { return getTokens(PrimaryGrammarParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(PrimaryGrammarParser.TEXT, i);
		}
		public List<AnswerContext> answer() {
			return getRuleContexts(AnswerContext.class);
		}
		public AnswerContext answer(int i) {
			return getRuleContext(AnswerContext.class,i);
		}
		public MChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mChoice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterMChoice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitMChoice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitMChoice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MChoiceContext mChoice() throws RecognitionException {
		MChoiceContext _localctx = new MChoiceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mChoice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__1);
			setState(84);
			match(ID);
			setState(85);
			match(T__2);
			setState(86);
			match(T__3);
			setState(87);
			match(T__4);
			setState(88);
			match(T__5);
			setState(89);
			match(TEXT);
			setState(90);
			match(T__6);
			setState(91);
			match(TEXT);
			setState(92);
			match(T__7);
			setState(93);
			match(T__8);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(94);
				answer();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchingContext extends ParserRuleContext {
		public String varName;
		public TerminalNode ID() { return getToken(PrimaryGrammarParser.ID, 0); }
		public TerminalNode TEXT() { return getToken(PrimaryGrammarParser.TEXT, 0); }
		public List<MatchAnswerLeftContext> matchAnswerLeft() {
			return getRuleContexts(MatchAnswerLeftContext.class);
		}
		public MatchAnswerLeftContext matchAnswerLeft(int i) {
			return getRuleContext(MatchAnswerLeftContext.class,i);
		}
		public List<MatchAnswerRightContext> matchAnswerRight() {
			return getRuleContexts(MatchAnswerRightContext.class);
		}
		public MatchAnswerRightContext matchAnswerRight(int i) {
			return getRuleContext(MatchAnswerRightContext.class,i);
		}
		public List<RightPeerContext> rightPeer() {
			return getRuleContexts(RightPeerContext.class);
		}
		public RightPeerContext rightPeer(int i) {
			return getRuleContext(RightPeerContext.class,i);
		}
		public MatchingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterMatching(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitMatching(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitMatching(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingContext matching() throws RecognitionException {
		MatchingContext _localctx = new MatchingContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_matching);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__1);
			setState(103);
			match(ID);
			setState(104);
			match(T__2);
			setState(105);
			match(T__3);
			setState(106);
			match(T__10);
			setState(107);
			match(T__5);
			setState(108);
			match(TEXT);
			setState(109);
			match(T__11);
			setState(110);
			match(T__8);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(111);
				matchAnswerLeft();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(T__9);
			setState(118);
			match(T__12);
			setState(119);
			match(T__8);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(120);
				matchAnswerRight();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(T__9);
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case T__0:
			case T__1:
			case T__6:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__21:
			case T__29:
			case T__30:
			case T__35:
			case T__41:
			case T__43:
			case T__45:
			case INTEGER:
			case REAL:
			case TEXT:
			case BOOLEAN:
			case ID:
				{
				}
				break;
			case T__13:
				{
				{
				setState(128);
				match(T__13);
				setState(129);
				match(T__8);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(130);
					rightPeer();
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(136);
				match(T__9);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PrimaryGrammarParser.ID, 0); }
		public TerminalNode TEXT() { return getToken(PrimaryGrammarParser.TEXT, 0); }
		public TerminalNode BOOLEAN() { return getToken(PrimaryGrammarParser.BOOLEAN, 0); }
		public AnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitAnswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerContext answer() throws RecognitionException {
		AnswerContext _localctx = new AnswerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_answer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(ID);
			setState(140);
			match(TEXT);
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case ID:
				{
				}
				break;
			case T__14:
				{
				setState(142);
				match(T__14);
				setState(143);
				match(BOOLEAN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchAnswerLeftContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PrimaryGrammarParser.ID, 0); }
		public TerminalNode TEXT() { return getToken(PrimaryGrammarParser.TEXT, 0); }
		public MatchAnswerLeftContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchAnswerLeft; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterMatchAnswerLeft(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitMatchAnswerLeft(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitMatchAnswerLeft(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchAnswerLeftContext matchAnswerLeft() throws RecognitionException {
		MatchAnswerLeftContext _localctx = new MatchAnswerLeftContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_matchAnswerLeft);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(ID);
			setState(147);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchAnswerRightContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PrimaryGrammarParser.ID, 0); }
		public TerminalNode TEXT() { return getToken(PrimaryGrammarParser.TEXT, 0); }
		public MatchAnswerRightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchAnswerRight; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterMatchAnswerRight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitMatchAnswerRight(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitMatchAnswerRight(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchAnswerRightContext matchAnswerRight() throws RecognitionException {
		MatchAnswerRightContext _localctx = new MatchAnswerRightContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_matchAnswerRight);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(ID);
			setState(150);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightPeerContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PrimaryGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PrimaryGrammarParser.ID, i);
		}
		public RightPeerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightPeer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterRightPeer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitRightPeer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitRightPeer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RightPeerContext rightPeer() throws RecognitionException {
		RightPeerContext _localctx = new RightPeerContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_rightPeer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(ID);
			setState(153);
			match(T__14);
			setState(154);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type res;
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimaryGrammarListener ) ((PrimaryGrammarListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimaryGrammarVisitor ) return ((PrimaryGrammarVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}
